samples/_failures_safe/1761146188_951b69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a509bcf.c: In function ‘main’:
./samples/SAFE/__tmp_5a509bcf.c:137:5: error: expected expression at end of input
  137 |     double ratio = (1.0 - (double)compressed.size / (double)input_len) *
      |     ^~~~~~
./samples/SAFE/__tmp_5a509bcf.c:137:5: error: expected declaration or statement at end of input
